--- a/hugo.toml
+++ b/hugo.toml
@@ -1,5 +1,6 @@
-baseURL = "/"
-title = "Docs pluscloudopen"
+baseURL = 'https://docs.pco.get-cloud.io/'
+languageCode = 'en-us'
+#title = 'pluscloud open: docs'
 
 # Language settings
 contentDir = "content/en"
@@ -24,13 +25,10 @@ category = "categories"
 [params.taxonomy]
 # set taxonomyCloud = [] to hide taxonomy clouds
 taxonomyCloud = ["tags", "categories"]
-
 # If used, must have same length as taxonomyCloud
 taxonomyCloudTitle = ["Tag Cloud", "Categories"]
-
 # set taxonomyPageHeader = [] to hide taxonomies on the page headers
 taxonomyPageHeader = ["tags", "categories"]
-
 
 # Highlighting config
 pygmentsCodeFences = true
@@ -47,41 +45,45 @@ blog = "/:section/:year/:month/:day/:slug/"
 
 # Image processing configuration.
 [imaging]
-resampleFilter = "CatmullRom"
+resampleFilter = "CatmullRom" # https://gohugo.io/content-management/image-processing/#resampling-filter
 quality = 75
 anchor = "smart"
+[imaging.exif]
+disableDate = false
+disableLatLong = true
+excludeFields = ''
+includeFields = ''
 
-#[services]
+[services]
 #[services.googleAnalytics]
 # Comment out the next line to disable GA tracking. Also disables the feature described in [params.ui.feedback].
 #id = "UA-00000000-0"
 
 # Language configuration
-
 [languages]
 [languages.en]
-title = "Docs pluscloudopen"
-description = "Documentation for pluscloudopen"
-languageName ="English"
+title = "pluscloud open"
+description = "The technical documentation for pluscloud open"
+languageName = "English"
 # Weight used for sorting.
 weight = 1
-
-[languages.de]
-title = "Doku pluscloudopen"
-description = "Dokumentation für pluscloudopen"
-languageName ="Deutsch"
-# Weight used for sorting.
-weight = 2
+#[languages.de]
+#title = "pluscloud open: docs"
+#description = "Die technische Dokumentation für die pluscloud open"
+#languageName ="Deutsch"
+#contentDir = "content/de"
+#time_format_default = "02.01.2006"
+#time_format_blog = "02.01.2006"
 
 [markup]
-  [markup.goldmark]
-    [markup.goldmark.renderer]
-      unsafe = true
-  [markup.highlight]
-    # See a complete list of available styles at https://xyproto.github.io/splash/docs/all.html
-    style = "tango"
-    # Uncomment if you want your chosen highlight style used for code blocks without a specified language
-    guessSyntax = "true"
+[markup.goldmark]
+[markup.goldmark.renderer]
+unsafe = true
+[markup.highlight]
+# See a complete list of available styles at https://xyproto.github.io/splash/docs/all.html
+style = "github"
+# Uncomment if you want your chosen highlight style used for code blocks without a specified language
+guessSyntax = "true"
 
 # Everything below this are Site Params
 
@@ -89,8 +91,32 @@ weight = 2
 [outputs]
 section = ["HTML", "print", "RSS"]
 
+# https://gohugo.io/about/hugo-and-gdpr/
+[privacy]
+[privacy.disqus]
+disable = false
+[privacy.googleAnalytics]
+anonymizeIP = false
+disable = false
+respectDoNotTrack = false
+useSessionStorage = false
+[privacy.instagram]
+disable = false
+simple = false
+[privacy.twitter]
+disable = false
+enableDNT = false
+simple = false
+[privacy.vimeo]
+disable = false
+enableDNT = false
+simple = false
+[privacy.youtube]
+disable = false
+privacyEnhanced = false
+
 [params]
-copyright = "plusserver GmbH"
+copyright = "PlusServer GmbH"
 privacy_policy = "https://www.plusserver.com/en/privacy-policy"
 
 # First one is picked as the Twitter card image if not set on page.
@@ -98,34 +124,33 @@ privacy_policy = "https://www.plusserver.com/en/privacy-policy"
 
 # Menu title if your navbar has a versions selector to access old versions of your site.
 # This menu appears only if you have at least one [params.versions] set.
-version_menu = "Releases"
+#version_menu = "Releases"
 
-# Flag used in the "version-banner" partial to decide whether to display a
+# Flag used in the "version-banner" partial to decide whether to display a 
 # banner on every page indicating that this is an archived version of the docs.
 # Set this flag to "true" if you want to display the banner.
-archived_version = false
+#archived_version = false
 
 # The version number for the version of the docs represented in this doc set.
-# Used in the "version-banner" partial to display a version number for the
+# Used in the "version-banner" partial to display a version number for the 
 # current doc set.
-version = "0.1"
+#version = "0.0"
 
 # A link to latest version of the docs. Used in the "version-banner" partial to
 # point people to the main doc site.
-url_latest_version = "https://595ef528.pco.get-cloud.io"
+#url_latest_version = "https://example.com"
 
 # Repository configuration (URLs for in-page links to opening issues and suggesting changes)
-github_repo = "https://github.com/pluscloudopen/595ef528"
-
+github_repo = "https://github.com/pluscloudopen/docs"
 # An optional link to a related project repo. For example, the sibling repository where your product code lives.
-#github_project_repo = "https://github.com/google/docsy"
+#github_project_repo = "https://github.com/pluscloudopen/docs"
 
 # Specify a value here if your content directory is not in your repo's root directory
 # github_subdir = ""
 
 # Uncomment this if your GitHub repo does not have "main" as the default branch,
 # or specify a new value if you want to reference another branch in your GitHub links
-#github_branch= "master"
+github_branch = "main"
 
 # Google Custom Search Engine ID. Remove or comment out to disable search.
 #gcs_engine_id = "d72aa9b2712488cc3"
@@ -137,14 +162,14 @@ algolia_docsearch = false
 offlineSearch = true
 
 # Enable syntax highlighting and copy buttons on code blocks with Prism
-prism_syntax_highlighting = false
+prism_syntax_highlighting = true
 
 # User interface configuration
 [params.ui]
 #  Set to true to disable breadcrumb navigation.
 breadcrumb_disable = false
 # Set to true to disable the About link in the site footer
-footer_about_disable = false
+footer_about_disable = true
 # Set to false if you don't want to display a logo (/assets/icons/logo.svg) in the top navbar
 navbar_logo = true
 # Set to true if you don't want the top navbar to be translucent when over a `block/cover`, like on the homepage.
@@ -159,36 +184,56 @@ sidebar_search_disable = false
 # If you want this feature, but occasionally need to remove the "Feedback" section from a single page,
 # add "hide_feedback: true" to the page's front matter.
 [params.ui.feedback]
-enable = true
+enable = false
 # The responses that the user sees after clicking "yes" (the page was helpful) or "no" (the page was not helpful).
-yes = 'Glad to hear it! Please <a href="https://github.com/pluscloudopen/595ef528/issues/new">tell us how we can improve</a>.'
-no = 'Sorry to hear that. Please <a href="https://github.com/pluscloudopen/595ef528/issues/new">tell us how we can improve</a>.'
+yes = 'Glad to hear it! Please <a href="https://github.com/pluscloudopen/docs/issues/new">tell us how we can improve</a>.'
+no = 'Sorry to hear that. Please <a href="https://github.com/pluscloudopen/docs/issues/new">tell us how we can improve</a>.'
 
 # Adds a reading time to the top of each doc.
-# If you want this feature, but occasionally need to remove the Reading time from a single page,
+# If you want this feature, but occasionally need to remove the Reading time from a single page, 
 # add "hide_readingtime: true" to the page's front matter
 [params.ui.readingtime]
 enable = true
 
 [params.links]
 # End user relevant links. These will show up on left side of footer and in the community page if you have one.
-[[params.links.plusserver]]
-  name = "plusserver"
-  url = "https://www.plusserver.com/en/"
-  icon = "fa fa-envelope"
-  desc = "plusserver Homepage"
+[[params.links.user]]
+name = "pluscloud open"
+url = "https://www.plusserver.com/en/products/pluscloud-open"
+icon = "fa-solid fa-house"
+desc = "pluscloud open product page"
+[[params.links.user]]
+name = "GitHub"
+url = "https://github.com/pluscloudopen"
+icon = "fab fa-github"
+desc = "Development takes place here!"
+# Developer relevant links. These will show up on right side of footer and in the community page if you have one.
+[[params.links.developer]]
+name = "Contact"
+url = "https://www.plusserver.com/en/about-us/plusserver-contact"
+icon = "fa-solid fa-phone"
+desc = "PlusServer GmbH Contact"
+[[params.links.developer]]
+name = "Company Information"
+url = "https://www.plusserver.com/en/company-information"
+icon = "fa-solid fa-gavel"
+desc = "PlusServer GmbH Legal notice"
 
 # hugo module configuration
 
+
+theme = ["github.com/google/docsy", "github.com/google/docsy/dependencies"]
+
 [module]
-  # uncomment line below for temporary local development of module
-  # replacements = "github.com/google/docsy -> ../../docsy"
-  [module.hugoVersion]
-    extended = true
-    min = "0.75.0"
-  [[module.imports]]
-    path = "github.com/google/docsy"
-    disable = false
-  [[module.imports]]
-    path = "github.com/google/docsy/dependencies"
-    disable = false
+proxy = "direct"
+# uncomment line below for temporary local development of module
+# replacements = "github.com/google/docsy -> ../../docsy"
+[module.hugoVersion]
+extended = true
+min = "0.110.0"
+[[module.imports]]
+path = "github.com/google/docsy"
+disable = false
+[[module.imports]]
+path = "github.com/google/docsy/dependencies"
+disable = false
